finish a good flattening ===================== main update: added bending constraints ===================== readme: 1. click triangulation 2. click halfedgize 3. click step

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,8 @@ add_subdirectory(libShapeOp)
 # Add your project files
 file(GLOB SRCFILES *.cpp)
 add_executable(${PROJECT_NAME} ${SRCFILES})
-target_include_directories(${PROJECT_NAME} PUBLIC ./shape-op/)
+#target_include_directories(${PROJECT_NAME} PUBLIC ./shape-op/)
+target_include_directories(${PROJECT_NAME} PUBLIC ./libShapeOp/)
 #target_include_directories(${PROJECT_NAME} PUBLIC /usr/local/Cellar/boost/1.64.0_1/include/)
 #target_include_directories(${PROJECT_NAME} PUBLIC /usr/local/Cellar/gmp/6.1.2/include/)
 #target_include_directories(${PROJECT_NAME} PUBLIC /usr/local/Cellar/mpfr/3.1.5/include/)
